--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/images/image.ts" />
+    <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
   
     <title>Connect</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
